# Clutch-Scraper

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  error.rs  logging.rs  main.rs  utils.rs
src/client/: builder.rs  mod.rs
src/proxy/: manager.rs  mod.rs  stats.rs
src/scraper/: content.rs  mod.rs  page.rs
