[package]
name = "clutch-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
rquest = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-socks = "0.5.2"
scraper = "0.22.0"
url = "2.4"
anyhow = "1.0"
futures = "0.3.31"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
glob = "0.3.2"
regex = "1.5"
toml = "0.8"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
http = "1.2.0"
